<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/animation_drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawable_animation"
        android:layout_margin="@dimen/margin_defaul"/>

    <Button
        android:id="@+id/view_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_animation"
        android:layout_margin="@dimen/margin_defaul"/>

    <Button
        android:id="@+id/value_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_animation"
        android:layout_margin="@dimen/margin_defaul"/>

    <Button
        android:id="@+id/object_drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_animation"
        android:layout_margin="@dimen/margin_defaul"/>

    <Button
        android:id="@+id/custom_drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_animation"
        android:layout_margin="@dimen/margin_defaul"/>

</LinearLayout>